--- a/security.html
+++ b/security.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692216110-security-engineer'>Anitian  Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692216110-security-engineer'>Anitian  Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... In the context of IT network and security team enforcement, Harmonic recruits a 
 senior Network and Security engineer to deliver network and security services to
@@ -145,7 +145,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talent-acquisition-concepts.breezy.hr/p/fee5c63297e9-it-network-security-engineer'>IT Network Security Engineer at Talent Acquisition Concepts</a></h5> 
+<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/fee5c63297e9-it-network-security-engineer'>IT Network Security Engineer at Talent Acquisition Concepts</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -161,7 +161,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ironnet/job/oeBCafwl'>IronNet Cybersecurity Careers - Senior Software Engineer - Interfaces</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/oeBCafwl'>IronNet Cybersecurity Careers - Senior Software Engineer - Interfaces</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -205,7 +205,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
+<h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -311,7 +311,7 @@ today!</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -332,7 +332,7 @@ today!</p>
 <p>4 days ago ... Cybersecurity Analyst. Key Role: Provide detection, identification, and reporting 
 of possible Cyber-attacks and intrusions, anomalous activities, and misuse?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
+<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Paranoids Senior Insider Threat Analyst | US - Sunnyvale, More... Paranoids 
 Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...</p>
@@ -349,7 +349,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -403,7 +403,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -423,11 +423,11 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://garmin-cluj.workable.com/j/73837DF9A6'>Garmin Cluj - Jobs: Cyber Security Analyst - Apply online</a></h5> 
+<h5><a href='https://garmin-cluj.workable.com/j/73837DF9A6'>Garmin Cluj - Jobs: Cyber Security Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://garmin-cluj.workable.com/j/E4425EF836'>Garmin Cluj - Jobs: Senior Cyber Security DevOps Engineer - Apply online</a></h5> 
+<h5><a href='https://garmin-cluj.workable.com/j/E4425EF836'>Garmin Cluj - Jobs: Senior Cyber Security DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -448,7 +448,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/8E6AAFA520'>SemanticBits - Jobs: Security Engineer - Apply online</a></h5> 
+<h5><a href='https://semanticbits.workable.com/j/8E6AAFA520'>SemanticBits - Jobs: Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
